--- a/index.css
+++ b/index.css
@@ -5,16 +5,16 @@
 }
 
 body {
-    background-color: grey;
+    background-color: rgb(110, 107, 107);
 }
 
 header {
-    background-color: white;
+    background-color: rgb(250, 249, 249);
     padding: 20px;
 }
 
 header h1 {
-    color: blue;
+    color: rgb(24, 24, 77);
     text-align: center;
     font-family: sans-serif;
     font-size: 40px;
@@ -23,22 +23,23 @@ header h1 {
 .score-board {
     margin: 20px auto;
     padding: 15px 20px;
-    border: 3px solid white;
+    border: 1px solid rgb(250, 249, 249);
     border-radius: 4px;
     width: 200px;
     text-align: center;
-    color: white;
+    color: rgb(250, 249, 249);
     font-size: 40px;
     font-family: sans-serif;
     position: relative;
 }
 
 .badge {
-    background-color: red;
-    color: white;
+    background-color: rgb(228, 3, 3);
+    color: rgb(250, 249, 249);
     font-size: 14px;
     font-family: sans-serif;
     padding: 2px 10px;
+    border: 1px solid rgb(250, 249, 249);
 }
 
 #user-label {
@@ -55,13 +56,13 @@ header h1 {
 
 .results {
     font-size: 40px;
-    color: white;
+    color: rgb(250, 249, 249);
 }
 
 .results>p {
     text-align: center;
     font-family: sans-serif;
-    font-weight: bold;
+    font-weight: lighter;
 }
 
 .choices {
@@ -71,7 +72,7 @@ header h1 {
 
 .choice {
     display: inline-block;
-    border: 4px solid white;
+    border: 1px solid rgb(250, 249, 249);
     border-radius: 50%;
     padding: 10px;
     margin: 0 10px;
@@ -80,14 +81,14 @@ header h1 {
 
 .choice:hover {
     cursor: pointer;
-    background-color: rgb(167, 154, 154);
+    background-color: rgb(124, 122, 122);
 }
 
 #action-message {
     text-align: center;
-    color: white;
+    color: rgb(250, 249, 249);
     font-family: sans-serif;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: lighter;
     margin-top: 20px;
 }
